--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,6 +1,6 @@
 
 .footer{
-    
+    padding-bottom: 100px;
     background-color: #0D1117;
     border-top: 1px solid #3d3d3d;
 }
